# coding: utf-8
[metadata]
name = ngtt
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
keywords = iot, client, smok, upload, scada
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = A client for SMOK's Next Generation Transport proTocol
url = https://github.com/smok-serwis/ngtt
project-urls =
    Documentation = https://ngtt.readthedocs.io/
	Code = https://github.com/smok-serwis/ngtt
	Issue tracker = https://github.com/smok-serwis/ngtt/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1

